--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@types/yup": "^0.32.0",
     "axios": "^1.11.0",
     "formik": "^2.4.6",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
     "react": "19.1.0",
