--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack -p 5000 -H 192.168.1.3",
+    "dev": "next dev --turbopack -p 5000",
     "build": "next build --turbopack",
-    "start": "next start -p 5000 -H 192.168.1.3",
+    "start": "next start -p 5000",
     "lint": "eslint",
     "test": "jest",
     "test:watch": "jest --watch",
